Projects added assets (BPS)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -90,11 +90,11 @@
               data-theme="husqy"
               (click)="changeActiveTheme('husqy')"
             ></div>
-            <div
+            <!-- <div
               class="theme"
               data-theme="matrix"
               (click)="changeActiveTheme('matrix')"
-            ></div>
+            ></div> -->
             <div
               class="theme"
               data-theme="cyberspace"
@@ -213,10 +213,21 @@
           class="item__button"
           data-color="tertiary-color"
           data-color-bg="transparent-color"
+          href="public/CaseStudy1.pdf"
+          target="_blank"
+          attributes-list=""
+          download=""
+        >
+          <span class="label"><strong>Download CV</strong></span>
+        </a>
+        <!-- <a
+          class="item__button"
+          data-color="tertiary-color"
+          data-color-bg="transparent-color"
           (click)="scrollToSection('projects')"
         >
-          <span class="label"><strong>My Projects</strong></span>
-        </a>
+          <span class="label"><strong>Download CV</strong></span>
+        </a> -->
       </div>
       <div class="work__container">
         <!-- <div class="item" data-color="primary-color">
