--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -18,7 +18,7 @@
 
     // Card
     --color-card-bg-hover: var(--color-bg-secondary);
-    --color-card-inset-shadow: rg(148, 163, 184);
+    --color-card-inset-shadow: 148, 163, 184;
     --color-card-shadow: var(--color-black);
 
     // Text
@@ -98,7 +98,8 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 234, 64, 0;
+    --color-hover-radial-gradient: 255, 94, 0;
+    // --color-hover-radial-gradient: 234, 64, 0;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -129,7 +130,7 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    -color-hover-radial-gradient: 255, 15, 0;
+    --color-hover-radial-gradient: 173, 255, 173;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -160,7 +161,8 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 255, 63, 0;
+    --color-hover-radial-gradient: 109, 140, 255;
+    // --color-hover-radial-gradient: 255, 63, 0;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -184,13 +186,15 @@
     --color-button-primary: 64, 214, 114;
     --color-button-secondary: 22, 235, 126;
     --color-button-bg-primary: 15, 192, 93;
+
     // Card
     --color-card-bg-hover: var(--color-bg-secondary);
     --color-card-inset-shadow: 148, 163, 184;
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 145, 56, 0;
+    --color-hover-radial-gradient: 0, 177, 106;
+    // --color-hover-radial-gradient: 145, 56, 0;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -221,7 +225,8 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 135, 0, 0;
+    --color-hover-radial-gradient: 0, 128, 255;
+    // --color-hover-radial-gradient: 135, 0, 0;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -252,7 +257,8 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 255, 0, 47;
+    --color-hover-radial-gradient: 255, 138, 197;
+    // --color-hover-radial-gradient: 255, 0, 47;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -282,7 +288,8 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 102, 97, 0;
+    --color-hover-radial-gradient: 255, 21, 255;
+    // --color-hover-radial-gradient: 102, 97, 0;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
@@ -312,7 +319,8 @@
     --color-card-shadow: var(--color-black);
 
     // Hover Circle
-    --color-hover-radial-gradient: 81, 48, 0;
+    --color-hover-radial-gradient: 206, 0, 124;
+    // --color-hover-radial-gradient: 81, 48, 0;
     --opacity-hover-radial-gradient: 0.15;
 
     // Default
