--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -116,7 +116,7 @@ ion-content main nav .menu__sidebar .themes .themes__list {
   flex-direction: column;
   gap: 1rem;
 }
-ion-content main nav .menu__sidebar .themes .themes__list:hover .theme, ion-content main nav .menu__sidebar .themes .themes__list.collapsed .theme {
+ion-content main nav .menu__sidebar .themes .themes__list.collapsed .theme {
   display: flex;
   opacity: 1;
 }
@@ -230,6 +230,7 @@ ion-content main section .item__button {
   border-radius: 0.5rem;
   position: relative;
   cursor: pointer;
+  text-decoration: none;
 }
 ion-content main section .item__button:hover {
   background-color: rgba(var(--color-button-bg-primary), 0.7) !important;
@@ -273,6 +274,7 @@ ion-content main section#hero .item__header span span:has(strong.active) .soc__m
   border-radius: 50%;
   background-color: rgba(var(--color-bg-secondary), var(--opacity-bg-secondary));
   cursor: pointer;
+  transform: rotate(-270deg);
 }
 ion-content main section#hero .item__header span span:has(strong.active) .soc__med .soc a {
   display: flex;
@@ -310,7 +312,7 @@ ion-content main section#hero .item__header span span .soc__med .soc {
   aspect-ratio: 1;
   width: 4.25rem;
   padding: 0.25rem;
-  transition: opacity 0.75s;
+  transition: opacity 0.5s;
   align-items: center;
   justify-content: center;
   bottom: 0;
