--- a/src/app/swiper-projects/swiper-projects.component.html
+++ b/src/app/swiper-projects/swiper-projects.component.html
@@ -107,7 +107,7 @@
         <div class="preview__toggle">
           <span (click)="toggleProject(2)"><strong>Preview</strong></span>
         </div>
-        <img src="" alt="" />
+        <img src="/assets/projects/AlBuy.png" alt="" />
         <iframe
           [ngClass]="{ active: isProjectActive[2] }"
           src="https://albuy.netlify.app/"
@@ -158,17 +158,39 @@
         <div class="preview__toggle">
           <span (click)="toggleProject(3)"><strong>Preview</strong></span>
         </div>
-        <img src="" alt="" />
-        <iframe
+        <img
+          src="/assets/projects/case study 2 preview.jpg"
+          alt=""
+          class="fill"
+        />
+        <video
+          loop
+          muted
+          autoplay
+          playbackrate="0.5"
+          preload="metadata"
+          class="docs"
           [ngClass]="{ active: isProjectActive[3] }"
-          src=""
+        >
+          <source src="/assets/projects/case study 2.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <!-- <iframe
+          class="docs"
+          [ngClass]="{ active: isProjectActive[3] }"
+          src="/assets/projects/case study 2.mp4"
           frameborder="0"
-        ></iframe>
+        ></iframe> -->
       </div>
       <div class="body">
         <div class="details">
           <div class="title">
-            <a href="" target="_blank" class="">
+            <a
+              href="/assets/docs/casestudy2.pdf"
+              target="_blank"
+              class=""
+              download=""
+            >
               <strong>Data Analysis &nbsp; · &nbsp; Tableau</strong>
             </a>
             <i class="fa-solid fa-arrow-up"></i>
@@ -201,17 +223,39 @@
         <div class="preview__toggle">
           <span (click)="toggleProject(4)"><strong>Preview</strong></span>
         </div>
-        <img src="" alt="" />
-        <iframe
+        <img
+          src="/assets/projects/case study 1 preview.jpg"
+          alt=""
+          class="fill"
+        />
+        <video
+          loop
+          muted
+          autoplay
+          playbackrate="0.5"
+          preload="metadata"
+          class="docs"
           [ngClass]="{ active: isProjectActive[4] }"
-          src=""
+        >
+          <source src="/assets/projects/case study 1.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+        <!-- <iframe
+          class="docs"
+          [ngClass]="{ active: isProjectActive[4] }"
+          src="/assets/projects/case study 1.mp4"
           frameborder="0"
-        ></iframe>
+        ></iframe> -->
       </div>
       <div class="body">
         <div class="details">
           <div class="title">
-            <a href="" target="_blank" class="">
+            <a
+              href="/assets/docs/casestudy1.pdf"
+              target="_blank"
+              class=""
+              download=""
+            >
               <strong>Data Analysis &nbsp; · &nbsp; R-Studio</strong>
             </a>
             <i class="fa-solid fa-arrow-up"></i>
