--- a/src/app/swiper-projects/swiper-projects.component.scss
+++ b/src/app/swiper-projects/swiper-projects.component.scss
@@ -10,6 +10,14 @@
   width: 100%;
   height: 100%;
 
+  &:has(.swiper-button-prev:hover, .swiper-button-next:hover) {
+    .project {
+      &:not(:hover) {
+        opacity: 0.5;
+      }
+    }
+  }
+
   .swiper-wrapper {
     display: grid;
     grid-template-columns: repeat(5, minmax(24rem, 1fr));
@@ -169,7 +177,8 @@
         position: relative;
 
         img,
-        iframe {
+        iframe,
+        video {
           width: 100%;
           height: 100%;
           opacity: 1;
@@ -179,22 +188,47 @@
           img {
             display: none;
           }
+
+          video {
+            display: none;
+          }
+        }
+
+        &:has(video.active) {
+          img {
+            display: none;
+          }
+
+          iframe {
+            display: none;
+          }
         }
 
         img {
           display: flex;
+          object-fit: cover;
+          object-position: center;
+
+          &.fill {
+            object-fit: fill;
+          }
         }
 
-        iframe {
+        iframe,
+        video {
           display: none;
-          zoom: 0.25;
+
+          &:not(.docs) {
+            zoom: 0.25;
+          }
 
           &.active {
             display: flex;
           }
         }
 
-        &:has(iframe:not(.active)) {
+        &:has(iframe:not(.active)),
+        &:has(video:not(.active)) {
           &:hover {
             .preview__toggle {
               display: flex;
