--- a/src/app/home/home.page.css
+++ b/src/app/home/home.page.css
@@ -68,7 +68,7 @@ ion-content main nav {
   -webkit-backdrop-filter: blur(0.25rem);
 }
 ion-content main nav .menu__icon {
-  visibility: hidden;
+  display: none;
 }
 ion-content main nav .menu__span {
   font-weight: bold;
@@ -291,7 +291,8 @@ ion-content main section#hero .item__header span span:has(strong.active) .soc__m
   color: rgb(var(--color-button-primary));
 }
 ion-content main section#hero .item__header span span .soc__med {
-  width: 14rem;
+  width: 100%;
+  max-width: 14rem;
   border: 2px solid transparent;
   border-left: 2px solid rgba(var(--color-text-primary), 0.1);
   border-right: 2px solid rgba(var(--color-text-primary), 0.1);
@@ -676,16 +677,34 @@ ion-content main section#projects .section__body .scroll {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 11rem;
   position: absolute;
-  left: 50%;
+  left: 3rem;
   bottom: 1rem;
-  gap: 2rem;
+  gap: 0.5rem;
 }
 ion-content main section#projects .section__body .scroll span {
   color: rgb(var(--color-text-primary));
   text-transform: uppercase;
-  font-size: 0.75rem;
+  font-size: 1rem;
+}
+ion-content main section#projects .section__body .scroll span.hover {
+  display: none;
+}
+ion-content main section#projects .section__body .scroll img {
+  height: 2rem;
+  aspect-ratio: 16/9;
+}
+ion-content main section#projects .section__body .scroll:hover {
+  gap: 0.25;
+}
+ion-content main section#projects .section__body .scroll:hover img {
+  visibility: hidden;
+}
+ion-content main section#projects .section__body .scroll:hover span.hover {
+  display: flex;
+}
+ion-content main section#projects .section__body .scroll:hover span.hover strong {
+  color: rgb(var(--color-button-primary));
 }
 ion-content main section#projects .section__body .scroll .arrow {
   width: 4.5rem;
@@ -729,7 +748,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     padding: 1rem;
   }
   ion-content main nav .menu__icon {
-    visibility: visible;
+    display: flex;
     cursor: pointer;
   }
   ion-content main nav .menu__icon i {
@@ -738,10 +757,10 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     transition: 0.3s;
   }
   ion-content main nav .menu__span {
-    visibility: hidden;
+    display: none;
   }
   ion-content main nav .menu__sidebar button.meteor__toggle {
-    visibility: hidden;
+    display: none;
   }
   ion-content main section .item__header {
     font-size: 1.75rem;
@@ -751,32 +770,36 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     font-size: 0.825rem;
   }
   ion-content main section#hero .item {
-    width: 75%;
+    padding-inline: 2rem;
+    width: auto;
+    gap: 1rem;
+    margin: auto;
   }
   ion-content main section#hero .item__header {
-    font-size: 2rem;
+    font-size: clamp(1.5rem, 0.4286rem + 5.3571vw, 3rem);
   }
   ion-content main section#hero .item__header span span:has(strong.active) .soc__med .soc a i {
-    font-size: 1.5rem;
+    font-size: clamp(1rem, -0.0714rem + 5.3571vw, 2.5rem);
   }
   ion-content main section#hero .item__header span span .soc__med {
-    width: 7rem;
+    display: none;
+    min-width: clamp(7rem, 2rem + 25vw, 10rem);
   }
   ion-content main section#hero .item__header span span .soc__med .soc {
     width: 2.25rem;
   }
   ion-content main section#hero .item__subheader {
-    font-size: 0.875rem;
-    width: 80%;
+    font-size: clamp(0.75rem, 0.3929rem + 1.7857vw, 1.25rem);
+    width: 100%;
   }
   ion-content main section#hero .section__scroll span {
-    font-size: 0.75rem;
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
   }
   ion-content main section#work {
     display: flex;
     flex-direction: column;
-    padding-block: 4.25rem 1rem;
-    align-items: flex-start;
+    padding: 3.25rem 1rem 1rem;
+    align-items: center;
     justify-content: flex-start;
     gap: 2rem;
   }
@@ -784,16 +807,26 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     flex-direction: column;
     width: 100%;
     position: relative;
-    gap: 1.5rem;
+    top: 0;
+    gap: 2rem;
     align-items: flex-start;
-    padding-inline: 0;
+    padding-inline: 0 1rem;
     padding-bottom: 0;
   }
   ion-content main section#work .about__us .item__header span {
-    font-size: 3rem;
+    font-size: 1rem;
+  }
+  ion-content main section#work .about__us .item__subheader span {
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
   }
   ion-content main section#work .about__us .body {
     gap: 1rem;
+  }
+  ion-content main section#work .about__us .item__button {
+    padding: 0.25rem 1rem;
+  }
+  ion-content main section#work .about__us .item__button span {
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
   }
   ion-content main section#work .work__container {
     width: 100%;
@@ -802,7 +835,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     align-items: start;
     justify-items: center;
     overflow-y: scroll;
-    padding-inline: 0 5rem;
+    padding-inline: 0;
     position: relative;
   }
   ion-content main section#work .work__container #workExperience {
@@ -833,17 +866,21 @@ ion-content main section#projects .section__body .scroll .arrow::after {
   }
   ion-content main section#work .work__container .work__list {
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 1rem;
   }
   ion-content main section#work .work__container .work__list .header {
     flex-direction: row;
     width: auto;
-    padding-inline: 1rem;
+    padding-inline: 0;
     position: sticky;
     top: 0;
     z-index: 2;
     backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(1px);
+    font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
+  }
+  ion-content main section#work .work__container .work__list .header.educ {
+    top: 1.5rem;
   }
   ion-content main section#work .work__container .work__list .header .div {
     align-items: center;
@@ -858,7 +895,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     color: rgb(var(--color-button-primary));
   }
   ion-content main section#work .work__container .work__list .header .div i {
-    font-size: 0.75rem;
+    font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
     margin-top: 0.25rem;
     rotate: 45deg;
     transition: 0.3s;
@@ -867,10 +904,11 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     opacity: 0.5;
   }
   ion-content main section#work .work__container .work__list .work {
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
     padding: 1rem;
-    gap: 2rem;
+    gap: 0.5rem;
     border-radius: 0.25rem;
     overflow: hidden;
     backdrop-filter: blur(0.25rem);
@@ -904,14 +942,17 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     width: 100%;
     height: 100%;
     align-self: flex-start;
-    max-width: 8rem;
+    max-width: 100%;
     margin-block: 0.25rem;
   }
   ion-content main section#work .work__container .work__list .work .date span {
     font-weight: 600;
-    font-size: 0.75rem;
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
     line-height: 1rem;
     color: rgb(var(--color-text-secondary));
+  }
+  ion-content main section#work .work__container .work__list .work .date:has(img) {
+    display: none;
   }
   ion-content main section#work .work__container .work__list .work .body {
     flex-direction: column;
@@ -924,14 +965,14 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     flex-direction: row;
     align-items: center;
     gap: 0.5rem;
-    font-size: 1rem;
+    font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
     color: rgb(var(--color-text-primary));
   }
   ion-content main section#work .work__container .work__list .work .body .details .title a {
     text-decoration: none;
   }
   ion-content main section#work .work__container .work__list .work .body .details .title i {
-    font-size: 0.75rem;
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
     margin-top: 0.25rem;
     rotate: 45deg;
     transition: 0.3s;
@@ -941,7 +982,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
   }
   ion-content main section#work .work__container .work__list .work .body .details .description span {
     line-height: 1.5;
-    font-size: 0.875rem;
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
     color: rgb(var(--color-text-secondary));
   }
   ion-content main section#work .work__container .work__list .work .body .details .description span i {
@@ -970,7 +1011,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
   }
   ion-content main section#work .work__container .work__list .work .body .links a.link span {
     font-weight: 600;
-    font-size: 0.875rem;
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
     line-height: 1.25rem;
   }
   ion-content main section#work .work__container .work__list .work .body .skills {
@@ -980,7 +1021,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     flex-wrap: wrap;
   }
   ion-content main section#work .work__container .work__list .work .body .skills .skill {
-    font-size: 0.75rem;
+    font-size: 0.675rem;
     line-height: 1.25rem;
     font-weight: 500;
     padding: 0.25rem 0.75rem;
@@ -992,7 +1033,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     flex-direction: column;
   }
   ion-content main section#work .work__container .work__list .scroll {
-    display: flex;
+    display: none;
     align-items: center;
     width: auto;
     position: absolute;
@@ -1052,7 +1093,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     align-items: center;
   }
   ion-content main section#projects .section__header .title span {
-    font-size: 3rem;
+    font-size: 1.25rem;
   }
   ion-content main section#projects .section__header .title span strong {
     cursor: default;
@@ -1062,7 +1103,7 @@ ion-content main section#projects .section__body .scroll .arrow::after {
   }
   ion-content main section#projects .section__header .subtitle span {
     text-align: right;
-    font-size: 1rem;
+    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
   }
   ion-content main section#projects .section__body {
     width: 100%;
@@ -1075,10 +1116,9 @@ ion-content main section#projects .section__body .scroll .arrow::after {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 11rem;
     position: absolute;
-    left: 50%;
-    bottom: 1rem;
+    left: 3rem;
+    bottom: 0.5rem;
     gap: 2rem;
   }
   ion-content main section#projects .section__body .scroll span {
