--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -57,6 +57,11 @@
             ></div>
             <div
               class="theme"
+              data-theme="rainbow-trail"
+              (click)="changeActiveTheme('rainbow-trail')"
+            ></div>
+            <div
+              class="theme"
               data-theme="tron-orange"
               (click)="changeActiveTheme('tron-orange')"
             ></div>
@@ -79,11 +84,6 @@
               class="theme"
               data-theme="dino"
               (click)="changeActiveTheme('dino')"
-            ></div>
-            <div
-              class="theme"
-              data-theme="rainbow-trail"
-              (click)="changeActiveTheme('rainbow-trail')"
             ></div>
             <div
               class="theme"
@@ -213,7 +213,7 @@
           class="item__button"
           data-color="tertiary-color"
           data-color-bg="transparent-color"
-          href="public/CaseStudy1.pdf"
+          href="/assets/docs/delacruz-resume.pdf"
           target="_blank"
           attributes-list=""
           download=""
@@ -265,7 +265,7 @@
             </div>
           </div>
           <div class="work">
-            <div class="date"><span>SEP 2023 — PRESENT</span></div>
+            <div class="date"><span>OCT 2023 — PRESENT</span></div>
             <div class="body">
               <div class="details">
                 <div class="title">
@@ -341,7 +341,7 @@
               </div>
             </div>
           </div>
-          <div class="header">
+          <div class="header educ">
             <div class="div" (click)="scrollToSection('educationExperience')">
               <span><strong>Education</strong></span>
               <i class="fa-solid fa-arrow-up"></i>
@@ -397,6 +397,60 @@
               </div>
             </div>
           </div>
+          <div class="work education">
+            <div class="date">
+              <img src="/assets/docs/cert1.png" alt="" />
+            </div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="/assets/docs/cert1.png" target="_blank" class="">
+                    <strong
+                      >Responsive Web Design &nbsp; · &nbsp;
+                      freeCodeCamp.</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span>October 21, 2023</span>
+                </div>
+              </div>
+              <div class="links">
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-certificate"></i>
+                  <span>Developer Certification</span></a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="work education">
+            <div class="date">
+              <img src="/assets/docs/cert2.png" alt="" />
+            </div>
+            <div class="body">
+              <div class="details">
+                <div class="title">
+                  <a href="/assets/docs/cert2.png" target="_blank" class="">
+                    <strong
+                      >JavaScript Algorithms and Data Structure &nbsp; · &nbsp;
+                      freeCodeCamp.</strong
+                    >
+                  </a>
+                  <i class="fa-solid fa-arrow-up"></i>
+                </div>
+                <div class="description">
+                  <span>October 22, 2023</span>
+                </div>
+              </div>
+              <div class="links">
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-certificate"></i>
+                  <span>Developer Certification</span></a
+                >
+              </div>
+            </div>
+          </div>
           <div class="div"></div>
           <div class="scroll">
             <span>scroll</span>
@@ -423,251 +477,12 @@
         </div> -->
       </div>
       <div class="section__body">
-        <!-- <div class="scroll">
-          <span>scroll</span>
-          <div class="arrow"></div>
-        </div> -->
+        <div class="scroll">
+          <span><strong>Powered by </strong></span>
+          <span class="hover"><strong>Ionic Angular</strong></span>
+          <img src="/assets/icon/Ionic Angular.png" alt="" />
+        </div>
         <app-swiper-projects></app-swiper-projects>
-
-        <!-- <div class="project__list">
-          <div></div>
-
-          <div class="project">
-            <div class="preview">
-              <div class="preview__toggle">
-                <span (click)="toggleProject(0)"><strong>Preview</strong></span>
-              </div>
-              <img src="" alt="" />
-              <iframe
-                src=""
-                frameborder="0"
-                [ngClass]="{'active': isProjectActive[0]}"
-              ></iframe>
-            </div>
-            <div class="body">
-              <div class="details">
-                <div class="title">
-                  <a href="" target="_blank" class="">
-                    <strong>TrackMinder &nbsp; · &nbsp; Mobile App</strong>
-                  </a>
-                  <i class="fa-solid fa-arrow-up"></i>
-                </div>
-                <div class="description">
-                  <span
-                    >Trackminder is an all-in-one reminder, planner, scheduler,
-                    and tracker app designed to help users organize their tasks,
-                    appointments, health, and goals efficiently.</span
-                  >
-                </div>
-              </div>
-              <div class="links">
-                <div class="link">
-                  <i class="fa-solid fa-mobile-screen-button"></i>
-                  <strong>
-                    <span data-flip="StartUp Project"> Mobile Development</span>
-                  </strong>
-                </div>
-              </div>
-              <div class="skills">
-                <div class="skill">Angular</div>
-                <div class="skill">Ionic Framework</div>
-                <div class="skill">Typescript</div>
-                <div class="skill">SCSS</div>
-                <div class="skill">GitHub</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="preview">
-              <div class="preview__toggle">
-                <span (click)="toggleProject(1)"><strong>Preview</strong></span>
-              </div>
-              <img src="/assets/projects/atg.png" alt="" />
-              <iframe
-                src="https://atg-db.netlify.app/"
-                frameborder="0"
-                [ngClass]="{'active': isProjectActive[1]}"
-              ></iframe>
-            </div>
-            <div class="body">
-              <div class="details">
-                <div class="title">
-                  <a
-                    href="https://atg-db.netlify.app/"
-                    target="_blank"
-                    class=""
-                    rel="noopener"
-                  >
-                    <strong
-                      >Against the Gods Database &nbsp; · &nbsp; Web App</strong
-                    >
-                  </a>
-                  <i class="fa-solid fa-arrow-up"></i>
-                </div>
-                <div class="description">
-                  <span
-                    >My personal fan-made website for the Against The Gods
-                    Donghua/Anime</span
-                  >
-                </div>
-              </div>
-              <div class="links">
-                <div class="link">
-                  <i class="fa-solid fa-laptop-code"></i>
-                  <strong>
-                    <span data-flip="Personal Project"> Web Development</span>
-                  </strong>
-                </div>
-              </div>
-              <div class="skills">
-                <span class="skill">Bootstrap 5</span>
-                <span class="skill">HTML:5</span>
-                <div class="skill">SCSS</div>
-                <span class="skill">Parse Platform</span>
-                <span class="skill">Back4App</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="preview">
-              <div class="preview__toggle">
-                <span (click)="toggleProject(2)"><strong>Preview</strong></span>
-              </div>
-              <img src="" alt="" />
-              <iframe
-                [ngClass]="{'active': isProjectActive[2]}"
-                src="https://albuy.netlify.app/"
-                frameborder="0"
-              ></iframe>
-            </div>
-            <div class="body">
-              <div class="details">
-                <div class="title">
-                  <a
-                    href="https://albuy.netlify.app/"
-                    target="_blank"
-                    class=""
-                    rel="noopener"
-                  >
-                    <strong>AlBuy &nbsp; · &nbsp; E-commerce Web App</strong>
-                  </a>
-                  <i class="fa-solid fa-arrow-up"></i>
-                </div>
-                <div class="description">
-                  <span
-                    >An E-commerce platform for DTI's One Town, One Product Hubs
-                    in Albay, Bicol.</span
-                  >
-                </div>
-              </div>
-              <div class="links">
-                <div class="link">
-                  <i class="fa-solid fa-laptop-code"></i>
-                  <strong>
-                    <span data-flip="Capstone Project"> Web Development</span>
-                  </strong>
-                </div>
-              </div>
-              <div class="skills">
-                <div class="skill">Vue JS</div>
-                <div class="skill">Node JS</div>
-                <div class="skill">Parse Platform</div>
-                <div class="skill">TeleportHQ</div>
-                <div class="skill">Figma</div>
-                <div class="skill">Back4App</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="preview">
-              <div class="preview__toggle">
-                <span (click)="toggleProject(3)"><strong>Preview</strong></span>
-              </div>
-              <img src="" alt="" />
-              <iframe
-                [ngClass]="{'active': isProjectActive[3]}"
-                src=""
-                frameborder="0"
-              ></iframe>
-            </div>
-            <div class="body">
-              <div class="details">
-                <div class="title">
-                  <a href="" target="_blank" class="">
-                    <strong>Data Analysis &nbsp; · &nbsp; Tableau</strong>
-                  </a>
-                  <i class="fa-solid fa-arrow-up"></i>
-                </div>
-                <div class="description">
-                  <span
-                    >An Analysis of Pre-Disaster Preparedness in Albay, Bicol
-                    Region.</span
-                  >
-                </div>
-              </div>
-              <div class="links">
-                <div class="link">
-                  <i class="fa-solid fa-flask"></i>
-                  <strong>
-                    <span data-flip="Case Study"> Data Analytics</span>
-                  </strong>
-                </div>
-              </div>
-              <div class="skills">
-                <div class="skill">Tableau</div>
-                <div class="skill">Microsoft Excel</div>
-                <div class="skill">Data Visualization</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="project">
-            <div class="preview">
-              <div class="preview__toggle">
-                <span (click)="toggleProject(4)"><strong>Preview</strong></span>
-              </div>
-              <img src="" alt="" />
-              <iframe
-                [ngClass]="{'active': isProjectActive[4]}"
-                src=""
-                frameborder="0"
-              ></iframe>
-            </div>
-            <div class="body">
-              <div class="details">
-                <div class="title">
-                  <a href="" target="_blank" class="">
-                    <strong>Data Analysis &nbsp; · &nbsp; R-Studio</strong>
-                  </a>
-                  <i class="fa-solid fa-arrow-up"></i>
-                </div>
-                <div class="description">
-                  <span
-                    >Procurement Management of the Resources Used During the
-                    First Quarter by Philippine Government Agencies as Response
-                    Measures to the COVID-19 Pandemic in the Bicol Region.</span
-                  >
-                </div>
-              </div>
-              <div class="links">
-                <div class="link">
-                  <i class="fa-solid fa-flask"></i>
-                  <strong>
-                    <span data-flip="Case Study"> Data Analytics</span>
-                  </strong>
-                </div>
-              </div>
-              <div class="skills">
-                <div class="skill">R-Studio</div>
-                <div class="skill">R</div>
-                <div class="skill">Data Visualization</div>
-              </div>
-            </div>
-          </div>
-        </div> -->
       </div>
     </section>
   </main>
