--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -87,7 +87,8 @@ ion-content {
 
       .menu {
         &__icon {
-          visibility: hidden;
+          // visibility: hidden;
+          display: none;
         }
 
         &__span {
@@ -413,7 +414,8 @@ ion-content {
                 }
 
                 .soc__med {
-                  width: 14rem;
+                  width: 100%;
+                  max-width: 14rem;
                   border: 2px solid transparent;
                   border-left: 2px solid rgba(var(--color-text-primary), 0.1);
                   border-right: 2px solid rgba(var(--color-text-primary), 0.1);
@@ -974,20 +976,46 @@ ion-content {
             display: flex;
             flex-direction: row;
             align-items: center;
-            width: 11rem;
+            // width: 11rem;
             // height: 8rem;
             // justify-content: space-between;
             position: absolute;
-            left: 50%;
+            // left: 50%;
+            left: 3rem;
             // right: 4rem;
             bottom: 1rem;
-            gap: 2rem;
+            gap: 0.5rem;
 
             span {
               color: rgb(var(--color-text-primary));
               // transform: rotate(90deg);
               text-transform: uppercase;
-              font-size: 0.75rem;
+              font-size: 1rem;
+
+              &.hover {
+                display: none;
+              }
+            }
+
+            img {
+              height: 2rem;
+              aspect-ratio: 16/9;
+            }
+
+            &:hover {
+              gap: 0.25;
+
+              img {
+                visibility: hidden;
+              }
+
+              span.hover {
+                display: flex;
+
+                strong {
+                  color: rgb(var(--color-button-primary));
+                }
+              }
             }
 
             .arrow {
@@ -1053,7 +1081,8 @@ ion-content {
 
         .menu {
           &__icon {
-            visibility: visible;
+            display: flex;
+            // visibility: visible;
             cursor: pointer;
 
             i {
@@ -1064,13 +1093,15 @@ ion-content {
           }
 
           &__span {
-            visibility: hidden;
+            display: none;
+            // visibility: hidden;
           }
 
           &__sidebar {
             button {
               &.meteor__toggle {
-                visibility: hidden;
+                // visibility: hidden;
+                display: none;
               }
             }
           }
@@ -1091,10 +1122,14 @@ ion-content {
 
         &#hero {
           .item {
-            width: 75%;
+            padding-inline: 2rem;
+            width: auto;
+            gap: 1rem;
+            margin: auto;
 
             &__header {
-              font-size: 2rem;
+              // font-size: 1.5rem;
+              font-size: clamp(1.5rem, 0.4286rem + 5.3571vw, 3rem);
 
               span {
                 span {
@@ -1103,7 +1138,12 @@ ion-content {
                       .soc {
                         a {
                           i {
-                            font-size: 1.5rem;
+                            // font-size: 1rem;
+                            font-size: clamp(
+                              1rem,
+                              -0.0714rem + 5.3571vw,
+                              2.5rem
+                            );
                           }
                         }
                       }
@@ -1111,7 +1151,8 @@ ion-content {
                   }
 
                   .soc__med {
-                    width: 7rem;
+                    display: none;
+                    min-width: clamp(7rem, 2rem + 25vw, 10rem);
 
                     .soc {
                       width: 2.25rem;
@@ -1122,14 +1163,16 @@ ion-content {
             }
 
             &__subheader {
-              font-size: 0.875rem;
-              width: 80%;
+              // font-size: 1rem;
+              font-size: clamp(0.75rem, 0.3929rem + 1.7857vw, 1.25rem);
+              width: 100%;
             }
           }
 
           .section__scroll {
             span {
-              font-size: 0.75rem;
+              // font-size: 0.75rem;
+              font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
             }
           }
         }
@@ -1137,8 +1180,8 @@ ion-content {
         &#work {
           display: flex;
           flex-direction: column;
-          padding-block: 4.25rem 1rem;
-          align-items: flex-start;
+          padding: 3.25rem 1rem 1rem;
+          align-items: center;
           justify-content: flex-start;
           gap: 2rem;
 
@@ -1146,19 +1189,36 @@ ion-content {
             flex-direction: column;
             width: 100%;
             position: relative;
-            gap: 1.5rem;
+            top: 0;
+            gap: 2rem;
             align-items: flex-start;
-            padding-inline: 0;
+            padding-inline: 0 1rem;
             padding-bottom: 0;
 
             .item__header {
               span {
-                font-size: 3rem;
+                // font-size: 3rem;
+                font-size: 1rem;
+                // font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
+              }
+            }
+
+            .item__subheader {
+              span {
+                font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
               }
             }
 
             .body {
               gap: 1rem;
+            }
+
+            .item__button {
+              padding: 0.25rem 1rem;
+
+              span {
+                font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
+              }
             }
           }
 
@@ -1170,7 +1230,7 @@ ion-content {
             justify-items: center;
             overflow-y: scroll;
             // padding-right: rem;
-            padding-inline: 0 5rem;
+            padding-inline: 0;
             position: relative;
 
             #workExperience {
@@ -1209,36 +1269,24 @@ ion-content {
               font-weight: 600;
             }
 
-            // .item {
-            //   position: sticky;
-            //   bottom: 0;
-            //   gap: 3rem;
-            //   align-self: flex-end;
-
-            //   .item__header {
-            //     span {
-            //       font-size: 3rem;
-            //     }
-            //   }
-
-            //   .body {
-            //     gap: 1rem;
-            //   }
-            // }
-
             .work__list {
               flex-direction: column;
-              gap: 1.5rem;
+              gap: 1rem;
 
               .header {
                 flex-direction: row;
                 width: auto;
-                padding-inline: 1rem;
+                padding-inline: 0;
                 position: sticky;
                 top: 0;
                 z-index: 2;
                 backdrop-filter: blur(1px);
                 -webkit-backdrop-filter: blur(1px);
+                font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
+
+                &.educ {
+                  top: 1.5rem;
+                }
 
                 .div {
                   align-items: center;
@@ -1259,7 +1307,8 @@ ion-content {
                   }
 
                   i {
-                    font-size: 0.75rem;
+                    // font-size: 0.75rem;
+                    font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
                     margin-top: 0.25rem;
                     rotate: 45deg;
                     transition: 0.3s;
@@ -1276,11 +1325,11 @@ ion-content {
               }
 
               .work {
-                flex-direction: row;
-                align-items: center;
-                // justify-content: space-between;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: center;
                 padding: 1rem;
-                gap: 2rem;
+                gap: 0.5rem;
                 border-radius: 0.25rem;
                 overflow: hidden;
                 backdrop-filter: blur(0.25rem);
@@ -1337,15 +1386,20 @@ ion-content {
                   width: 100%;
                   height: 100%;
                   align-self: flex-start;
-                  max-width: 8rem;
+                  max-width: 100%;
                   margin-block: 0.25rem;
 
                   span {
                     font-weight: 600;
-                    font-size: 0.75rem;
+                    // font-size: 0.75rem;
+                    font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
                     line-height: 1rem;
                     color: rgb(var(--color-text-secondary));
                     // color: var(--accent-color);
+                  }
+
+                  &:has(img) {
+                    display: none;
                   }
                 }
 
@@ -1360,7 +1414,8 @@ ion-content {
                       flex-direction: row;
                       align-items: center;
                       gap: 0.5rem;
-                      font-size: 1rem;
+                      // font-size: 1rem;
+                      font-size: clamp(0.875rem, 0.6071rem + 1.3393vw, 1.25rem);
                       color: rgb(var(--color-text-primary));
 
                       // &:has(a:hover) {
@@ -1375,7 +1430,8 @@ ion-content {
                       }
 
                       i {
-                        font-size: 0.75rem;
+                        // font-size: 0.75rem;
+                        font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
                         margin-top: 0.25rem;
                         rotate: 45deg;
                         transition: 0.3s;
@@ -1387,7 +1443,8 @@ ion-content {
 
                       span {
                         line-height: 1.5;
-                        font-size: 0.875rem;
+                        // font-size: 0.875rem;
+                        font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
                         color: rgb(var(--color-text-secondary));
 
                         i {
@@ -1424,7 +1481,8 @@ ion-content {
 
                       span {
                         font-weight: 600;
-                        font-size: 0.875rem;
+                        // font-size: 0.875rem;
+                        font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
                         line-height: 1.25rem;
                       }
                     }
@@ -1437,7 +1495,7 @@ ion-content {
                     flex-wrap: wrap;
 
                     .skill {
-                      font-size: 0.75rem;
+                      font-size: 0.675rem;
                       line-height: 1.25rem;
                       font-weight: 500;
                       padding: 0.25rem 0.75rem;
@@ -1463,7 +1521,7 @@ ion-content {
               }
 
               .scroll {
-                display: flex;
+                display: none;
                 align-items: center;
                 width: auto;
                 // height: 8rem;
@@ -1548,7 +1606,7 @@ ion-content {
 
             .title {
               span {
-                font-size: 3rem;
+                font-size: 1.25rem;
 
                 strong {
                   cursor: default;
@@ -1561,7 +1619,8 @@ ion-content {
 
               span {
                 text-align: right;
-                font-size: 1rem;
+                font-size: clamp(0.75rem, 0.5714rem + 0.8929vw, 1rem);
+                // font-size: 1rem;
               }
             }
           }
@@ -1581,13 +1640,14 @@ ion-content {
               display: flex;
               flex-direction: row;
               align-items: center;
-              width: 11rem;
+              // width: 11rem;
               // height: 8rem;
               // justify-content: space-between;
               position: absolute;
-              left: 50%;
+              // left: 50%;
+              left: 3rem;
               // right: 4rem;
-              bottom: 1rem;
+              bottom: 0.5rem;
               gap: 2rem;
 
               span {
