--- a/src/app/swiper-projects/swiper-projects.component.html
+++ b/src/app/swiper-projects/swiper-projects.component.html
@@ -1,18 +1,12 @@
 <div class="swiper">
   <div class="swiper-wrapper">
-    <!-- <div class="swiper-slide">Slide 1</div>
-    <div class="swiper-slide">Slide 2</div>
-    <div class="swiper-slide">Slide 3</div>
-    <div class="swiper-slide">Slide 4</div>
-    <div class="swiper-slide">Slide 5</div> -->
-
     <div class="project swiper-slide">
       <div class="preview">
         <div class="preview__toggle">
           <!-- <span (click)="toggleProject(0)" -->
           <span><strong>No Preview Available</strong></span>
         </div>
-        <img src="/assets/projects/TrackMinder.webp" alt="" />
+        <img src="/assets/projects/trackminder.png" alt="" />
         <iframe
           src=""
           frameborder="0"
