--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -236,7 +236,7 @@
           class="item__button"
           data-color="tertiary-color"
           data-color-bg="transparent-color"
-          href="/assets/docs/delacruz-resume.pdf"
+          href="assets/docs/delacruz-resume.pdf"
           target="_blank"
           attributes-list=""
           download=""
@@ -422,12 +422,12 @@
           </div>
           <div class="work education">
             <div class="date">
-              <img src="/assets/docs/cert1.png" alt="" />
+              <img src="assets/docs/cert1.png" alt="" />
             </div>
             <div class="body">
               <div class="details">
                 <div class="title">
-                  <a href="/assets/docs/cert1.png" target="_blank" class="">
+                  <a href="assets/docs/cert1.png" target="_blank" class="">
                     <strong
                       >Responsive Web Design &nbsp; · &nbsp;
                       freeCodeCamp.</strong
@@ -449,12 +449,12 @@
           </div>
           <div class="work education">
             <div class="date">
-              <img src="/assets/docs/cert2.png" alt="" />
+              <img src="assets/docs/cert2.png" alt="" />
             </div>
             <div class="body">
               <div class="details">
                 <div class="title">
-                  <a href="/assets/docs/cert2.png" target="_blank" class="">
+                  <a href="assets/docs/cert2.png" target="_blank" class="">
                     <strong
                       >JavaScript Algorithms and Data Structure &nbsp; · &nbsp;
                       freeCodeCamp.</strong
@@ -503,7 +503,7 @@
         <div class="scroll">
           <span><strong>Powered by </strong></span>
           <span class="hover"><strong>Ionic Angular</strong></span>
-          <img src="/assets/icon/Ionic Angular.png" alt="" />
+          <img src="assets/icon/Ionic Angular.png" alt="" />
         </div>
         <app-swiper-projects></app-swiper-projects>
       </div>
