--- a/src/app/swiper-projects/swiper-projects.component.html
+++ b/src/app/swiper-projects/swiper-projects.component.html
@@ -6,7 +6,7 @@
           <!-- <span (click)="toggleProject(0)" -->
           <span><strong>No Preview Available</strong></span>
         </div>
-        <img src="/assets/projects/trackminder.png" alt="" />
+        <img src="assets/projects/trackminder.png" alt="" />
         <iframe
           src=""
           frameborder="0"
@@ -58,7 +58,7 @@
         <div class="preview__toggle">
           <span (click)="toggleProject(1)"><strong>Preview</strong></span>
         </div>
-        <img src="/assets/projects/atg.png" alt="" />
+        <img src="assets/projects/atg.png" alt="" />
         <iframe
           src="https://atg-db.netlify.app/"
           frameborder="0"
@@ -108,7 +108,7 @@
         <div class="preview__toggle">
           <span (click)="toggleProject(2)"><strong>Preview</strong></span>
         </div>
-        <img src="/assets/projects/AlBuy.png" alt="" />
+        <img src="assets/projects/AlBuy.png" alt="" />
         <iframe
           [ngClass]="{ active: isProjectActive[2] }"
           src="https://albuy.netlify.app/"
@@ -160,7 +160,7 @@
           <span (click)="toggleProject(4)"><strong>Preview</strong></span>
         </div>
         <img
-          src="/assets/projects/case study 1 preview.jpg"
+          src="assets/projects/case study 1 preview.jpg"
           alt=""
           class="fill"
         />
@@ -172,13 +172,13 @@
           class="docs"
           [ngClass]="{ active: isProjectActive[4] }"
         >
-          <source src="/assets/projects/case study 1.mp4" type="video/mp4" />
+          <source src="assets/projects/case study 1.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <!-- <iframe
           class="docs"
           [ngClass]="{ active: isProjectActive[4] }"
-          src="/assets/projects/case study 1.mp4"
+          src="assets/projects/case study 1.mp4"
           frameborder="0"
         ></iframe> -->
       </div>
@@ -186,7 +186,7 @@
         <div class="details">
           <div class="title">
             <a
-              href="/assets/docs/casestudy1.pdf"
+              href="assets/docs/casestudy1.pdf"
               target="_blank"
               class=""
               download=""
@@ -225,7 +225,7 @@
           <span (click)="toggleProject(3)"><strong>Preview</strong></span>
         </div>
         <img
-          src="/assets/projects/case study 2 preview.jpg"
+          src="assets/projects/case study 2 preview.jpg"
           alt=""
           class="fill"
         />
@@ -236,13 +236,13 @@
           class="docs"
           [ngClass]="{ active: isProjectActive[3] }"
         >
-          <source src="/assets/projects/case study 2.mp4" type="video/mp4" />
+          <source src="assets/projects/case study 2.mp4" type="video/mp4" />
           Your browser does not support the video tag.
         </video>
         <!-- <iframe
           class="docs"
           [ngClass]="{ active: isProjectActive[3] }"
-          src="/assets/projects/case study 2.mp4"
+          src="assets/projects/case study 2.mp4"
           frameborder="0"
         ></iframe> -->
       </div>
@@ -250,7 +250,7 @@
         <div class="details">
           <div class="title">
             <a
-              href="/assets/docs/casestudy2.pdf"
+              href="assets/docs/casestudy2.pdf"
               target="_blank"
               class=""
               download=""
