Updated Resume and Responsiveness issue. Added new elements

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -104,16 +104,17 @@
             ></div>
           </div>
         </div>
-        <!-- <button
+        <button
           type="button"
           class="meteor__toggle"
           (click)="toggleMeteors($event)"
           [ngClass]="{'active': isMeteorsActive}"
           id="meteor"
           aria-label="meteor"
+          hidden
         >
           <i class="fa-solid fa-meteor"></i>
-        </button> -->
+        </button>
       </div>
     </nav>
     <section id="hero" style="display: flex">
@@ -312,16 +313,12 @@
                   </span>
                 </div>
               </div>
-              <!-- <div class="links">
+              <div class="links">
                 <a href="#" class="link" target="_blank">
-                  <i class="fa-solid fa-paperclip"></i>
-                  <span>OmniPay</span></a
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Salcedo Vilage, Makati City</span></a
                 >
-                <a href="#" class="link" target="_blank">
-                  <i class="fa-solid fa-paperclip"></i>
-                  <span>Binpo</span></a
-                >
-              </div> -->
+              </div>
               <div class="skills">
                 <span class="skill">ASP.NET MVC</span>
                 <span class="skill">C#</span>
@@ -354,8 +351,12 @@
                   </span>
                 </div>
               </div>
-              <!-- <div class="links">
-              </div> -->
+              <div class="links">
+                <a href="#" class="link" target="_blank">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span>Legazpi City, Albay</span></a
+                >
+              </div>
               <div class="skills">
                 <span class="skill">PHP</span>
                 <span class="skill">MySQL</span>
