--- a/src/app/swiper-projects/swiper-projects.component.html
+++ b/src/app/swiper-projects/swiper-projects.component.html
@@ -233,6 +233,7 @@
           loop
           muted
           autoplay
+          [playbackRate]="0.75"
           class="docs"
           [ngClass]="{ active: isProjectActive[3] }"
         >
