Updated about me section

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -226,10 +226,8 @@
           </div>
           <div class="item__subheader">
             <span>
-              From interaction design to scaleable design systems, single-page
-              apps to something more experimental with WebGL. I help awesome
-              people to build ambitious yet accessible web projects -
-              <strong> the wilder, the better </strong>.
+              While I may be at the beginning of my professional journey, I am confident with my Frontend Skills. All I need is a chance to prove that I could build you any web apps -
+              <strong> single-page app to scalable web applications </strong>.
             </span>
           </div>
         </div>
