update about me missing word

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -227,7 +227,7 @@
           <div class="item__subheader">
             <span>
               While I may be at the beginning of my professional journey, I am confident with my Frontend Skills. All I need is a chance to prove that I could build you any web apps -
-              <strong> single-page app to scalable web applications </strong>.
+              <strong> from single-page app to scalable web applications </strong>.
             </span>
           </div>
         </div>
