Added hover effect on socials in navbar

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -98,6 +98,10 @@ ion-content {
 
           &:hover {
             color: rgb(var(--color-text-secondary)) !important;
+
+            i{
+              color: rgb(var(--color-text-secondary)) !important;
+            }
           }
         }
 
